--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@ body {
   min-height: 100vh;
   margin: 0;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
@@ -231,4 +232,11 @@ button[type="submit"]:hover {
 
 .temp-cool {
   color: #60a5fa;
+}
+
+.github-logo {
+  width: 32px;
+  height: 32px;
+  filter: brightness(0) invert(1);
+  margin-top: 35%;
 }
